# test_task1

./: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
employees/: models.py  settings.py  urls.py  views.py
employees/API/: apps.py  serializers.py  urls.py  views.py
employees/employees/: settings.py
employees/migrations/: 0001_initial.py  0002_alter_employeeslist_supervisor.py
employees/scripts/: db_seed.py
employees/templates/: employee_list.html  index.html
