[tool.poetry]
name = "employees"
version = "0.1.0"
description = "A list of employees"
authors = ["Vova <bkj@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
python-dotenv = "^0.20.0"
dj-database-url = "^1.0.0"
pip = "^22.2.2"
psycopg2-binary = "^2.9.3"
django-seed = "^0.3.1"
django-extensions = "^3.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
